fixed flicker on download

--- a/css/main.css
+++ b/css/main.css
@@ -77,3 +77,8 @@ ul {
   width: 92px;
   height: 38px;
 }
+
+button {
+  width: 146px;
+  height: 38px;
+}
